--- a/kvm_setup/tasks/create_vm_single.yml
+++ b/kvm_setup/tasks/create_vm_single.yml
@@ -1,5 +1,6 @@
 ---
 # Create single VM from custom-underlay definition
+
 - name: Set VM facts from definition
   ansible.builtin.set_fact:
     vm_name: "{{ vm.vm_name }}"
@@ -8,14 +9,28 @@
     interfaces: "{{ vm.definition.interfaces | default({}) }}"
     natrules: "{{ vm.definition.natrules | default({}) }}"
     image_src: "{{ vm.definition.image_src | default('') }}"
+    # image_dest = where we FIRST download the image (could be .img or .qcow2)
     image_dest: "{{ vm.definition.image_dest | default('/var/lib/libvirt/images/' + vm_name + '.img') }}"
     memory: "{{ vm.definition.memory | default('1024') }}"
     vcpu: "{{ vm.definition.vcpu | default('1') }}"
     commands: "{{ vm.definition.commands | default([]) }}"
 
+- name: Derive base image and per-VM disk paths
+  ansible.builtin.set_fact:
+    # base_image_path = QCOW2 base image shared by all VMs using this source
+    base_image_path: "{{ image_dest | regex_replace('\\.[^.]+$', '.qcow2') }}"
+    # vm_disk_path = per-VM qcow2 overlay (unique per VM)
+    vm_disk_path: "/var/lib/libvirt/images/{{ vm_name }}.qcow2"
+
 - name: Debug VM facts
   ansible.builtin.debug:
-    msg: "Creating VM {{ vm_name }} with {{ memory }}MB RAM, {{ vcpu }} vCPU"
+    msg:
+      - "Creating VM {{ vm_name }}"
+      - "Download path: {{ image_dest }}"
+      - "Base image (qcow2): {{ base_image_path }}"
+      - "VM disk (overlay): {{ vm_disk_path }}"
+      - "RAM: {{ memory }} MB"
+      - "vCPUs: {{ vcpu }}"
 
 - name: Ensure image directory exists
   ansible.builtin.file:
@@ -25,20 +40,42 @@
     group: root
     mode: '0755'
 
-- name: Download or copy VM image
-  block:
-    - name: Download from Google Cloud Storage if gs:// URL
-      ansible.builtin.command:
-        cmd: "gsutil -m cp {{ image_src }} {{ image_dest }}"
-      when: image_src.startswith('gs://')
+# ---------------------------
+# IMAGE DOWNLOAD + CONVERSION
+# ---------------------------
 
-- name: Create qcow2 overlay disk
+- name: Download image from Google Cloud Storage if gs:// URL
+  ansible.builtin.command:
+    cmd: "gsutil -m cp {{ image_src }} {{ image_dest }}"
+  args:
+    creates: "{{ image_dest }}"
+  when: image_src is search('^gs://')
+
+# (Optional extension: you could add HTTP/local logic here later.)
+
+- name: Ensure base image is qcow2 (convert if needed)
+  ansible.builtin.command:
+    cmd: "qemu-img convert -O qcow2 {{ image_dest }} {{ base_image_path }}"
+  args:
+    creates: "{{ base_image_path }}"
+  when: image_dest != base_image_path
+
+# ---------------------------------
+# PER-VM DISK (INDEPENDENT OVERLAY)
+# ---------------------------------
+
+- name: Create per-VM qcow2 overlay disk
   ansible.builtin.command:
     cmd: >
       qemu-img create -f qcow2
-      -b {{ image_dest }}
-      {{ image_dest | regex_replace('\.img$', '.qcow2') }}
-    creates: "{{ image_dest | regex_replace('\.img$', '.qcow2') }}"
+      -b {{ base_image_path }}
+      {{ vm_disk_path }}
+  args:
+    creates: "{{ vm_disk_path }}"
+
+# ---------------
+# VM CREATION
+# ---------------
 
 - name: Create VM using virt_install
   community.libvirt.virt_install:
@@ -46,7 +83,7 @@
     memory: "{{ memory }}"
     vcpus: "{{ vcpu }}"
     disks:
-      - path: "{{ image_dest | regex_replace('\.img$', '.qcow2') }}"
+      - path: "{{ vm_disk_path }}"
     osinfo:
       name: "ubuntu22.04"
     import: true
