--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -1,6 +1,14 @@
 ---
-# This file contains variables that apply to all hosts in the inventory.
+# Global variables that apply to all hosts in the inventory
+# These variables are used across all roles and playbooks
 
 # The path to a YAML file containing VM definitions, potentially from a Puppet/Hiera setup.
 # This is used by the 'kvm_setup' role to load VM data if 'cncloud::custom::vm_data' is not defined elsewhere.
+# Default path assumes a Puppet/Hiera directory structure, but can be overridden.
 custom_underlay_path: /etc/puppet/hiera/data/role/custom/custom-underlay.yaml
+
+# Additional global variables can be added here:
+# - System-wide configuration settings
+# - Default paths and directories
+# - Common credentials (use Ansible Vault for sensitive data)
+# - Network configuration parameters
